fix xog 19 lỗi tiềm ẩn ở server