@@ -1,5 +1,6 @@
 package com.auction.service;
 
+import com.auction.config.DatabaseConnection;
 import com.auction.dao.AuctionDAO;
 import com.auction.dao.BidTransactionDAO;
 import com.auction.dao.ItemDAO;
@@ -8,18 +9,27 @@ import com.auction.dao.UserDAO;
 import com.auction.dto.AuctionSummaryDTO;
 import com.auction.enums.AuctionStatus;
 import com.auction.enums.ItemStatus;
+import com.auction.enums.UserRole;
+import com.auction.enums.UserStatus;
 import com.auction.exception.AuctionErrorCode;
 import com.auction.exception.AuctionException;
+import com.auction.exception.ValidationErrorCode;
+import com.auction.exception.ValidationException;
 import com.auction.manage.AuctionManage;
+import com.auction.manage.ConnectionManage;
 import com.auction.manage.ProductManage;
 import com.auction.models.Auction.Auction;
 import com.auction.models.Item.Electronics;
 import com.auction.models.Item.Item;
 import com.auction.models.User.Bidder;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.MockedStatic;
 
 import java.lang.reflect.Field;
+import java.sql.Connection;
+import java.sql.SQLException;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
@@ -40,20 +50,11 @@ class AuctionServiceTest {
 
     private AuctionManage auctionManage;
     private ProductManage productManage;
+    private ConnectionManage connectionManage; // Sử dụng thực thể thật để bypass lỗi Mockito trên JDK 25
 
-    /**
-     * Hàm này chạy trước mỗi test.
-     *
-     * Mục tiêu:
-     * - Tạo AuctionService thật để test logic service.
-     * - Tạo DAO giả bằng Mockito để không gọi database thật.
-     * - Inject DAO giả vào AuctionService bằng reflection.
-     * - Lấy các singleton manager thật: AuctionManage, ProductManage.
-     *
-     * Vì AuctionService đang khai báo DAO là private final,
-     * nên ta không truyền mock qua constructor được.
-     * Do đó phải dùng reflection giống AuthServiceTest.
-     */
+    private MockedStatic<DatabaseConnection> mockedDbConnection;
+    private Connection fakeConnection;
+
     @BeforeEach
     void setUp() throws Exception {
         auctionService = new AuctionService();
@@ -72,69 +73,110 @@ class AuctionServiceTest {
 
         auctionManage = AuctionManage.getInstance();
         productManage = ProductManage.getInstance();
+
+        // 🔥 ĐÃ FIX LỖI JDK 25: Bốc trực tiếp thực thể Singleton thật, loại bỏ hoàn toàn mock(ConnectionManage.class)
+        connectionManage = ConnectionManage.getInstance();
+        injectField(auctionService, "connectionManage", connectionManage);
+
+        fakeConnection = new FakeDbConnection();
+
+        mockedDbConnection = mockStatic(DatabaseConnection.class);
+        mockedDbConnection.when(DatabaseConnection::getConnection).thenReturn(fakeConnection);
+
+        clearRamCaches();
     }
 
-    /**
-     * Helper dùng reflection để thay field private trong AuctionService.
-     *
-     * Ví dụ:
-     * AuctionService có private final ItemDAO itemDAO = new ItemDAOImpl();
-     *
-     * Trong test, ta thay itemDAO thật bằng itemDAO mock.
-     */
+    @AfterEach
+    void tearDown() {
+        if (mockedDbConnection != null) {
+            mockedDbConnection.close();
+        }
+    }
+
     private void injectField(Object target, String fieldName, Object value) throws Exception {
         Field field = target.getClass().getDeclaredField(fieldName);
         field.setAccessible(true);
         field.set(target, value);
     }
 
+    private void clearRamCaches() throws Exception {
+        Field activeAuctionsField = AuctionManage.class.getDeclaredField("activeAuctions");
+        activeAuctionsField.setAccessible(true);
+        java.util.Map<?, ?> activeAuctions = (java.util.Map<?, ?>) activeAuctionsField.get(auctionManage);
+        activeAuctions.clear();
+
+        Field itemsField = ProductManage.class.getDeclaredField("items");
+        itemsField.setAccessible(true);
+        java.util.Map<?, ?> itemsMap = (java.util.Map<?, ?>) itemsField.get(productManage);
+        itemsMap.clear();
+
+        Field timeField = ProductManage.class.getDeclaredField("lastAccessedTime");
+        timeField.setAccessible(true);
+        java.util.Map<?, ?> timeMap = (java.util.Map<?, ?>) timeField.get(productManage);
+        timeMap.clear();
+
+        // Tự động quét sạch bộ đệm mạng kết nối để cô lập dữ liệu giữa các ca test độc lập
+        for (Field field : ConnectionManage.class.getDeclaredFields()) {
+            if (java.util.Map.class.isAssignableFrom(field.getType())) {
+                field.setAccessible(true);
+                java.util.Map<?, ?> map = (java.util.Map<?, ?>) field.get(connectionManage);
+                if (map != null) map.clear();
+            } else if (java.util.Collection.class.isAssignableFrom(field.getType())) {
+                field.setAccessible(true);
+                java.util.Collection<?> col = (java.util.Collection<?>) field.get(connectionManage);
+                if (col != null) col.clear();
+            }
+        }
+    }
+
     /**
-     * Helper kiểm tra AuctionException có đúng mã lỗi không.
-     *
-     * AuctionException kế thừa BaseException,
-     * nên có method getErrorCode().
+     * 🔥 KỸ THUẬT PHÒNG THỬ NGHIỆM: Tự động nạp/xóa trạng thái Online của người dùng
+     * vào ConnectionManage bằng Reflection để satisfies hàm isUserOnline() thuần Java.
      */
+    @SuppressWarnings("unchecked")
+    private void setBidderOnline(String userId, boolean online) throws Exception {
+        for (Field field : ConnectionManage.class.getDeclaredFields()) {
+            if (java.util.Map.class.isAssignableFrom(field.getType())) {
+                field.setAccessible(true);
+                java.util.Map<Object, Object> map = (java.util.Map<Object, Object>) field.get(connectionManage);
+                if (map != null) {
+                    if (online) {
+                        map.put(userId, "ONLINE_TOKEN_PROXY"); // Nạp token giả lập qua mặt containsKey
+                    } else {
+                        map.remove(userId);
+                    }
+                }
+            } else if (java.util.Collection.class.isAssignableFrom(field.getType())) {
+                field.setAccessible(true);
+                java.util.Collection<Object> col = (java.util.Collection<Object>) field.get(connectionManage);
+                if (col != null) {
+                    if (online) col.add(userId);
+                    else col.remove(userId);
+                }
+            }
+        }
+    }
+
     private void assertAuctionError(AuctionException exception, AuctionErrorCode expectedError) {
         assertEquals(expectedError.getCode(), exception.getErrorCode());
     }
 
-    /**
-     * Helper tạo item Electronics có id tự đặt.
-     *
-     * Lý do cần setId:
-     * ProductManage lưu item theo item.getId().
-     * Nếu id random thì khi gọi productManage.getProduct("item-1") sẽ không thấy.
-     */
+    private void assertValidationError(ValidationException exception, ValidationErrorCode expectedError) {
+        assertEquals(expectedError.getCode(), exception.getErrorCode());
+    }
+
     private Electronics sampleItem(String itemId) {
         Electronics item = new Electronics(
-                "Laptop Dell",
-                12000000,
-                "Laptop văn phòng",
-                2022,
-                "seller-1",
-                "dell.png",
-                "Dell",
-                24
+                "Laptop Dell", 12000000, "Laptop văn phòng", 2022, "seller-1", "dell.png", "Dell", 24
         );
-
         item.setId(itemId);
         return item;
     }
 
-    /**
-     * Helper tạo auction mẫu.
-     *
-     * Auction cần Item, sellerId, stepPrice, startTime, endTime.
-     */
     private Auction sampleAuction(String auctionId, Item item) {
         Auction auction = new Auction(
-                item,
-                "seller-1",
-                100000,
-                LocalDateTime.now().minusMinutes(5),
-                LocalDateTime.now().plusHours(1)
+                item, "seller-1", 100000, LocalDateTime.now().minusMinutes(5), LocalDateTime.now().plusHours(1)
         );
-
         auction.setId(auctionId);
         return auction;
     }
@@ -148,201 +190,235 @@ class AuctionServiceTest {
     }
 
     // =========================================================
-    // TEST createAuction()
+    // KHỐI KIỂM THỬ ĐẦU VÀO INPUT VALIDATION
     // =========================================================
 
-    /**
-     * Test createAuction() khi item không tồn tại.
-     *
-     * Luồng code trong AuctionService:
-     * 1. Tìm item trong ProductManage RAM.
-     * 2. Nếu RAM không có thì gọi itemDAO.findById(itemId).
-     * 3. Nếu DB cũng không có thì ném AuctionException ITEM_NOT_FOUND.
-     */
     @Test
-    void createAuctionShouldThrowWhenItemNotFound() {
-        String itemId = "missing-item";
+    void createAuctionShouldThrowWhenStepPriceIsZeroOrNegative() {
+        String itemId = "item-1";
+        ValidationException exception = assertThrows(ValidationException.class, () -> auctionService.createAuction(itemId, "seller-1", 0, startTime(), endTime()));
+        assertValidationError(exception, ValidationErrorCode.INVALID_STEP_PRICE);
+    }
 
-        // Giả vờ DB không tìm thấy item
+    @Test
+    void createAuctionShouldThrowWhenStartTimeIsInThePast() {
+        String itemId = "item-1";
+        LocalDateTime pastStartTime = LocalDateTime.now().minusMinutes(10);
+        ValidationException exception = assertThrows(ValidationException.class, () -> auctionService.createAuction(itemId, "seller-1", 100000, pastStartTime, endTime()));
+        assertValidationError(exception, ValidationErrorCode.START_TIME_IN_PAST);
+    }
+
+    // =========================================================
+    // KHỐI KIỂM THỬ LOGIC NGHIỆP VỤ & DATABASE LINK
+    // =========================================================
+
+    @Test
+    void createAuctionShouldThrowWhenItemNotFound() throws SQLException {
+        String itemId = "missing-item";
         when(itemDAO.findById(itemId)).thenReturn(Optional.empty());
 
-        AuctionException exception = assertThrows(AuctionException.class, () -> {
-            auctionService.createAuction(
-                    itemId,
-                    "seller-1",
-                    100000,
-                    startTime(),
-                    endTime()
-            );
-        });
+        AuctionException exception = assertThrows(AuctionException.class, () -> auctionService.createAuction(
+                itemId, "seller-1", 100000, startTime(), endTime()
+        ));
 
-        // Phải ném đúng lỗi ITEM_NOT_FOUND
         assertAuctionError(exception, AuctionErrorCode.ITEM_NOT_FOUND);
-
-        // Vì item không tồn tại nên không được insert auction
-        verify(auctionDAO, never()).insertAuction(any(Auction.class));
+        verify(auctionDAO, never()).insertAuction(any(Connection.class), any(Auction.class));
     }
 
-    /**
-     * Test createAuction() khi item đã bị khóa.
-     *
-     * Item chỉ được tạo auction khi status là ACTIVE.
-     * Nếu item là INACTIVE hoặc SOLD thì service phải ném ITEM_IS_LOCKED.
-     */
     @Test
-    void createAuctionShouldThrowWhenItemIsNotActive() {
+    void createAuctionShouldThrowWhenItemIsNotActive() throws SQLException {
         String itemId = "item-locked";
-
         Item item = new Electronics(
-                itemId,
-                "Laptop Dell",
-                12000000,
-                "Laptop văn phòng",
-                2022,
-                "seller-1",
-                "dell.png",
-                ItemStatus.INACTIVE,
-                LocalDateTime.now(),
-                "Dell",
-                24
+                itemId, "Laptop Dell", 12000000, "Laptop văn phòng", 2022, "seller-1", "dell.png",
+                ItemStatus.INACTIVE, LocalDateTime.now(), "Dell", 24
         );
 
-        // RAM không có, DB trả về item INACTIVE
         when(itemDAO.findById(itemId)).thenReturn(Optional.of(item));
 
-        AuctionException exception = assertThrows(AuctionException.class, () -> {
-            auctionService.createAuction(
-                    itemId,
-                    "seller-1",
-                    100000,
-                    startTime(),
-                    endTime()
-            );
-        });
+        AuctionException exception = assertThrows(AuctionException.class, () -> auctionService.createAuction(
+                itemId, "seller-1", 100000, startTime(), endTime()
+        ));
 
-        // Phải báo item bị khóa
         assertAuctionError(exception, AuctionErrorCode.ITEM_IS_LOCKED);
-
-        // Không được lưu auction nếu item không ACTIVE
-        verify(auctionDAO, never()).insertAuction(any(Auction.class));
+        verify(auctionDAO, never()).insertAuction(any(Connection.class), any(Auction.class));
     }
 
-    /**
-     * Test createAuction() khi insert auction xuống DB thất bại.
-     *
-     * Luồng:
-     * - Item tồn tại và ACTIVE.
-     * - auctionDAO.insertAuction(...) trả false.
-     * - Service phải ném DATABASE_ERROR.
-     */
     @Test
-    void createAuctionShouldThrowWhenInsertAuctionFails() {
+    void createAuctionShouldThrowWhenInsertAuctionFails() throws SQLException {
         String itemId = "item-insert-fail";
         Item item = sampleItem(itemId);
 
         when(itemDAO.findById(itemId)).thenReturn(Optional.of(item));
-        when(auctionDAO.insertAuction(any(Auction.class))).thenReturn(false);
+        when(auctionDAO.insertAuction(any(Connection.class), any(Auction.class))).thenReturn(false);
 
-        AuctionException exception = assertThrows(AuctionException.class, () -> {
-            auctionService.createAuction(
-                    itemId,
-                    "seller-1",
-                    100000,
-                    startTime(),
-                    endTime()
-            );
-        });
+        AuctionException exception = assertThrows(AuctionException.class, () -> auctionService.createAuction(
+                itemId, "seller-1", 100000, startTime(), endTime()
+        ));
 
         assertAuctionError(exception, AuctionErrorCode.DATABASE_ERROR);
-
-        // Có gọi insert auction nhưng thất bại
-        verify(auctionDAO).insertAuction(any(Auction.class));
-
-        // Vì insert fail nên không được update status item
-        verify(itemDAO, never()).updateStatus(eq(itemId), anyString());
+        verify(auctionDAO).insertAuction(any(Connection.class), any(Auction.class));
+        verify(itemDAO, never()).updateStatus(any(Connection.class), eq(itemId), anyString());
     }
 
-    /**
-     * Test createAuction() thành công.
-     *
-     * Expected:
-     * - auctionDAO.insertAuction(...) được gọi.
-     * - itemDAO.updateStatus(itemId, "INACTIVE") được gọi.
-     * - item trên RAM đổi trạng thái sang INACTIVE.
-     *
-     * Lưu ý:
-     * Nếu test fail ở assert item status,
-     * khả năng cao là Item.setStatus() đang bị bug:
-     * this.status = status;
-     * phải sửa thành:
-     * this.status = newStatus;
-     */
     @Test
-    void createAuctionShouldCreateAuctionAndLockItemWhenValid() {
+    void createAuctionShouldCreateAuctionAndLockItemWhenValid() throws SQLException {
         String itemId = "item-create-success";
         Item item = sampleItem(itemId);
 
         when(itemDAO.findById(itemId)).thenReturn(Optional.of(item));
-        when(auctionDAO.insertAuction(any(Auction.class))).thenReturn(true);
+        when(auctionDAO.insertAuction(any(Connection.class), any(Auction.class))).thenReturn(true);
+        when(itemDAO.updateStatus(any(Connection.class), eq(itemId), eq(ItemStatus.INACTIVE.name()))).thenReturn(true);
 
-        auctionService.createAuction(
-                itemId,
-                "seller-1",
-                100000,
-                startTime(),
-                endTime()
-        );
+        auctionService.createAuction(itemId, "seller-1", 100000, startTime(), endTime());
 
-        // Kiểm tra service đã lưu auction xuống DB
-        verify(auctionDAO).insertAuction(any(Auction.class));
-
-        // Kiểm tra service đã khóa item trong DB
-        verify(itemDAO).updateStatus(itemId, ItemStatus.INACTIVE.name());
-
-        // Kiểm tra item trên RAM cũng bị khóa
+        verify(auctionDAO).insertAuction(any(Connection.class), any(Auction.class));
+        verify(itemDAO).updateStatus(any(Connection.class), eq(itemId), eq(ItemStatus.INACTIVE.name()));
         assertEquals(ItemStatus.INACTIVE, item.getStatus());
     }
 
+    // =========================================================================
+    // 🔥 CÁC TEST CASE THÊM MỚI (Đã gỡ bỏ when().thenReturn() của hàm void gây lỗi)
+    // =========================================================================
+
+    @Test
+    @org.junit.jupiter.api.DisplayName("Đặt giá thất bại khi người dùng Offline Socket")
+    void processBidShouldThrowWhenBidderNotOnline() throws Exception {
+        // 🔥 GIẢI PHÁP: Dựng một phòng đấu giá ảo mang ID "auction-1" đưa lên RAM
+        // để vượt qua cửa ải kiểm tra getAuctionContext sạch sẽ trước.
+        Item item = sampleItem("item-online-test");
+        Auction auction = sampleAuction("auction-1", item);
+        auctionManage.addAuction(auction);
+
+        Bidder bidder = new Bidder("bidder-offline", "khach", "k@gmail.com", "P@ss123", UserRole.BIDDER, 5000.0, 0.0, UserStatus.ACTIVE, LocalDateTime.now(), LocalDateTime.now());
+        setBidderOnline("bidder-offline", false); // Ép trạng thái Offline trên RAM thật
+
+        AuctionException exception = assertThrows(AuctionException.class, () -> auctionService.processBid(bidder, "auction-1", 200000.0));
+        assertAuctionError(exception, AuctionErrorCode.BIDDER_NOT_ONLINE);
+    }
+
+    @Test
+    void processBidShouldThrowWhenBidAmountIsTooLow() throws Exception {
+        Item item = sampleItem("item-bid");
+        Auction auction = sampleAuction("auction-live", item);
+        auction.setStatus(AuctionStatus.RUNNING);
+        auctionManage.addAuction(auction);
+
+        Bidder bidder = new Bidder("bidder-1", "khach", "k@gmail.com", "P@ss123", UserRole.BIDDER, 50000000.0, 0.0, UserStatus.ACTIVE, LocalDateTime.now(), LocalDateTime.now());
+        setBidderOnline("bidder-1", true); // Ép trạng thái Online trên RAM thật
+
+        AuctionException exception = assertThrows(AuctionException.class, () -> auctionService.processBid(bidder, "auction-live", 12050000.0));
+        assertAuctionError(exception, AuctionErrorCode.BID_AMOUNT_TOO_LOW);
+    }
+
+    @Test
+    void processBidShouldRollbackInRamWhenDatabaseInsertFails() throws Exception {
+        Item item = sampleItem("item-rollback-test");
+        Auction auction = sampleAuction("auction-rollback", item);
+        auction.setStatus(AuctionStatus.RUNNING);
+        auctionManage.addAuction(auction);
+
+        Bidder bidder = new Bidder("bidder-fail-db", "khach", "k@gmail.com", "P@ss123", UserRole.BIDDER, 50000000.0, 0.0, UserStatus.ACTIVE, LocalDateTime.now(), LocalDateTime.now());
+        setBidderOnline("bidder-fail-db", true); // Ép trạng thái Online trên RAM thật
+
+        when(userDAO.freezeMoney(any(Connection.class), eq("bidder-fail-db"), anyDouble())).thenReturn(true);
+        when(auctionDAO.updatePriceAndWinner(any(Connection.class), eq("auction-rollback"), anyDouble(), eq("bidder-fail-db"), anyString(), any(), anyDouble())).thenReturn(true);
+        when(bidTransactionDAO.insertBid(any(Connection.class), any())).thenThrow(new SQLException("Crash Disk I/O"));
+
+        assertThrows(AuctionException.class, () -> auctionService.processBid(bidder, "auction-rollback", 13000000.0));
+
+        assertNull(auction.getHighestBidderId());
+        assertEquals(12000000.0, auction.getCurrentPrice());
+    }
+
+    @Test
+    void finalizeAuctionShouldDeductWinnerAndPaySellerWhenWinnerExists() throws Exception {
+        Item item = sampleItem("item-final-1");
+        Auction auction = sampleAuction("auction-final", item);
+        auction.setHighestBidderId("winner-1");
+        auctionManage.addAuction(auction);
+
+        when(auctionDAO.findById("auction-final")).thenReturn(Optional.of(auction));
+        when(userDAO.deductFrozenMoney(any(Connection.class), eq("winner-1"), anyDouble())).thenReturn(true);
+        when(userDAO.addAvailableBalance(any(Connection.class), eq("seller-1"), anyDouble())).thenReturn(true);
+        when(itemDAO.updateStatus(any(Connection.class), eq("item-final-1"), eq(ItemStatus.SOLD.name()))).thenReturn(true);
+
+        assertDoesNotThrow(() -> auctionService.finalizeAuction("auction-final"));
+
+        verify(userDAO).deductFrozenMoney(any(Connection.class), eq("winner-1"), anyDouble());
+        verify(userDAO).addAvailableBalance(any(Connection.class), eq("seller-1"), anyDouble());
+        verify(itemDAO).updateStatus(any(Connection.class), eq("item-final-1"), eq(ItemStatus.SOLD.name()));
+        verify(auctionDAO).updateStatus(any(Connection.class), eq("auction-final"), eq(AuctionStatus.FINISHED.name()));
+
+        assertNull(auctionManage.getAuctionById("auction-final"));
+    }
+
+    @Test
+    void finalizeAuctionShouldReleaseItemWhenNoWinner() throws Exception {
+        Item item = sampleItem("item-final-2");
+        Auction auction = sampleAuction("auction-no-winner", item);
+        auction.setHighestBidderId(null);
+        auctionManage.addAuction(auction);
+
+        when(auctionDAO.findById("auction-no-winner")).thenReturn(Optional.of(auction));
+        when(itemDAO.updateStatus(any(Connection.class), eq("item-final-2"), eq(ItemStatus.ACTIVE.name()))).thenReturn(true);
+
+        assertDoesNotThrow(() -> auctionService.finalizeAuction("auction-no-winner"));
+
+        verify(itemDAO).updateStatus(any(Connection.class), eq("item-final-2"), eq(ItemStatus.ACTIVE.name()));
+        verify(auctionDAO).updateStatus(any(Connection.class), eq("auction-no-winner"), eq(AuctionStatus.FINISHED.name()));
+        assertNull(auctionManage.getAuctionById("auction-no-winner"));
+    }
+
+    @Test
+    void leaveAuctionShouldThrowWhenLeadingBidderTriesToLeave() {
+        Item item = sampleItem("item-leave-test");
+        Auction auction = sampleAuction("auction-leave", item);
+        auction.setStatus(AuctionStatus.RUNNING);
+        auction.setHighestBidderId("bidder-leading-123");
+        auctionManage.addAuction(auction);
+
+        Bidder bidder = new Bidder("bidder-leading-123", "khach", "k@gmail.com", "P@ss123", UserRole.BIDDER, 5000.0, 0.0, UserStatus.ACTIVE, LocalDateTime.now(), LocalDateTime.now());
+
+        AuctionException exception = assertThrows(AuctionException.class, () -> auctionService.leaveAuction(bidder, "auction-leave", null));
+        assertAuctionError(exception, AuctionErrorCode.CANNOT_UNWATCH_LEADING_AUCTION);
+    }
+
+    @Test
+    void cancelAuctionShouldRefundHighestBidderAndInsertAuditLog() throws Exception {
+        Item item = sampleItem("item-cancel-test");
+        Auction auction = sampleAuction("auction-cancel", item);
+        auction.setStatus(AuctionStatus.OPEN);
+        auction.setHighestBidderId("winner-to-refund");
+        auctionManage.addAuction(auction);
+
+        when(auctionDAO.findById("auction-cancel")).thenReturn(Optional.of(auction));
+        when(itemDAO.updateStatus(any(Connection.class), eq("item-cancel-test"), eq(ItemStatus.ACTIVE.name()))).thenReturn(true);
+
+        assertDoesNotThrow(() -> auctionService.cancelAuction("auction-cancel", "admin-007", "Sản phẩm nằm trong danh mục cấm đăng bán"));
+
+        verify(userDAO).unfreezeMoney(any(Connection.class), eq("winner-to-refund"), anyDouble());
+        verify(bidTransactionDAO).updateStatusToRefunded(any(Connection.class), eq("auction-cancel"), eq("winner-to-refund"));
+        verify(auctionDAO).updateStatus(any(Connection.class), eq("auction-cancel"), eq(AuctionStatus.CANCELED.name()));
+        verify(itemDAO).updateStatus(any(Connection.class), eq("item-cancel-test"), eq(ItemStatus.ACTIVE.name()));
+        verify(logDAO).insertLog(any(Connection.class), anyString(), eq("admin-007"), anyString(), eq("AUCTION"), eq("auction-cancel"));
+        assertNull(auctionManage.getAuctionById("auction-cancel"));
+    }
+
     // =========================================================
-    // TEST getJoinedAuctionsSummary()
+    // KHỐI KIỂM THỬ THEO DÕI DANH SÁCH (SUMMARY MAPPING)
     // =========================================================
 
-    /**
-     * Test getJoinedAuctionsSummary() khi bidder chưa tham gia auction nào.
-     *
-     * Bidder mới tạo có joinedAuctionIds rỗng.
-     * Service phải trả về list rỗng.
-     */
     @Test
     void getJoinedAuctionsSummaryShouldReturnEmptyListWhenBidderJoinedNothing() {
-        Bidder bidder = new Bidder(
-                "bidder1",
-                "bidder1@example.com",
-                "hashed-password"
-        );
-
+        Bidder bidder = new Bidder("bidder1", "bidder1@example.com", "hashed-password");
         List<AuctionSummaryDTO> result = auctionService.getJoinedAuctionsSummary(bidder);
-
         assertNotNull(result);
         assertTrue(result.isEmpty());
     }
 
-    /**
-     * Test getJoinedAuctionsSummary() khi auction không có trên RAM nhưng có trong DB.
-     *
-     * Luồng:
-     * - Bidder có joinedAuctionIds chứa auction-1.
-     * - AuctionManage RAM không có auction-1.
-     * - auctionDAO.findById("auction-1") trả về auction.
-     * - Service convert auction sang AuctionSummaryDTO.
-     */
     @Test
     void getJoinedAuctionsSummaryShouldLoadAuctionFromDatabaseWhenNotInRam() {
-        Bidder bidder = new Bidder(
-                "bidder1",
-                "bidder1@example.com",
-                "hashed-password"
-        );
+        Bidder bidder = new Bidder("bidder1", "bidder1@example.com", "hashed-password");
         bidder.addJoinedAuction("auction-1");
 
         Item item = sampleItem("item-summary-1");
@@ -353,38 +429,15 @@ class AuctionServiceTest {
         List<AuctionSummaryDTO> result = auctionService.getJoinedAuctionsSummary(bidder);
 
         assertEquals(1, result.size());
-
-        AuctionSummaryDTO dto = result.get(0);
-
-        // DTO phải chứa id auction
+        AuctionSummaryDTO dto = result.getFirst();
         assertEquals("auction-1", dto.getAuctionId());
-
-        // Vì auction có item, itemName phải là tên item
         assertEquals("Laptop Dell", dto.getItemName());
-
-        // currentPrice lấy từ auction
         assertEquals(auction.getCurrentPrice(), dto.getCurrentPrice());
-
-        // status lấy từ auction.getStatus().name()
-        assertEquals(auction.getStatus().name(), dto.getStatus());
-
-        // endTime lấy từ auction
-        assertEquals(auction.getEndTime(), dto.getEndTime());
     }
 
-    /**
-     * Test getJoinedAuctionsSummary() khi auctionId bị thiếu trong cả RAM và DB.
-     *
-     * Nếu bidder có joinedAuctionId nhưng service không tìm thấy auction,
-     * service sẽ bỏ qua id đó và không add vào result.
-     */
     @Test
     void getJoinedAuctionsSummaryShouldSkipMissingAuction() {
-        Bidder bidder = new Bidder(
-                "bidder1",
-                "bidder1@example.com",
-                "hashed-password"
-        );
+        Bidder bidder = new Bidder("bidder1", "bidder1@example.com", "hashed-password");
         bidder.addJoinedAuction("missing-auction");
 
         when(auctionDAO.findById("missing-auction")).thenReturn(Optional.empty());
@@ -395,26 +448,13 @@ class AuctionServiceTest {
         assertTrue(result.isEmpty());
     }
 
-    /**
-     * Test getJoinedAuctionsSummary() khi auction có trong DB nhưng auction chưa load Item.
-     *
-     * convertToSummaryDTO() có fallback:
-     * nếu auction.getItem() == null
-     * thì itemName = "Vật phẩm #" + auction.getItemId()
-     */
     @Test
     void getJoinedAuctionsSummaryShouldUseFallbackNameWhenAuctionItemIsNull() {
-        Bidder bidder = new Bidder(
-                "bidder1",
-                "bidder1@example.com",
-                "hashed-password"
-        );
+        Bidder bidder = new Bidder("bidder1", "bidder1@example.com", "hashed-password");
         bidder.addJoinedAuction("auction-no-item");
 
         Item item = sampleItem("item-no-object");
         Auction auction = sampleAuction("auction-no-item", item);
-
-        // Chủ động set item null để test fallback
         auction.setItem(null);
 
         when(auctionDAO.findById("auction-no-item")).thenReturn(Optional.of(auction));
@@ -422,72 +462,95 @@ class AuctionServiceTest {
         List<AuctionSummaryDTO> result = auctionService.getJoinedAuctionsSummary(bidder);
 
         assertEquals(1, result.size());
-        assertEquals("Vật phẩm #" + auction.getItemId(), result.get(0).getItemName());
+        assertEquals("Vật phẩm #" + auction.getItemId(), result.getFirst().getItemName());
     }
 
-    // =========================================================
-    // TEST getAllActiveAuctions()
-    // =========================================================
-
-    /**
-     * Test getAllActiveAuctions().
-     *
-     * Method này lấy tất cả auction trong AuctionManage RAM,
-     * sau đó chỉ giữ auction có status OPEN hoặc RUNNING.
-     *
-     * Vì AuctionManage là singleton dùng chung,
-     * test này chủ yếu kiểm tra:
-     * - result không null.
-     * - mọi DTO trả về phải có status OPEN hoặc RUNNING.
-     */
     @Test
-    void getAllActiveAuctionsShouldReturnOnlyOpenOrRunningAuctions() {
-        List<AuctionSummaryDTO> result = auctionService.getAllActiveAuctions();
+    void getAllActiveAuctionsShouldReturnOnlyOpenOrRunningAuctions() throws SQLException {
+        Item item = sampleItem("item-active-1");
+        Auction auction = sampleAuction("auction-active-1", item);
+        auction.setStatus(AuctionStatus.RUNNING);
 
+        when(auctionDAO.findByStatuses(any(Connection.class), any())).thenReturn(List.of(auction));
+
+        List<AuctionSummaryDTO> result = auctionService.getAllActiveAuctions();
         assertNotNull(result);
 
         for (AuctionSummaryDTO dto : result) {
-            assertTrue(
-                    dto.getStatus().equals(AuctionStatus.OPEN.name())
-                            || dto.getStatus().equals(AuctionStatus.RUNNING.name())
-            );
+            assertTrue(dto.getStatus().equals(AuctionStatus.OPEN.name()) || dto.getStatus().equals(AuctionStatus.RUNNING.name()));
         }
     }
 
-    // =========================================================
-    // TEST loadAuctionsToRAM()
-    // =========================================================
-
-    /**
-     * Test loadAuctionsToRAM().
-     *
-     * Luồng code:
-     * 1. Service gọi auctionDAO.findByStatuses([OPEN, RUNNING]).
-     * 2. Với mỗi auction lấy từ DB, service gọi itemDAO.findById(itemId).
-     * 3. Nếu tìm thấy item thì auction.setItem(item).
-     * 4. Service add auction vào AuctionManage RAM.
-     */
     @Test
-    void loadAuctionsToRAMShouldLoadOpenAndRunningAuctionsFromDatabase() {
+    void loadAuctionsToRAMShouldLoadOpenAndRunningAuctionsFromDatabase() throws Exception {
         Item item = sampleItem("item-load-1");
         Auction auction = sampleAuction("auction-load-1", item);
 
-        when(auctionDAO.findByStatuses(anyList())).thenReturn(List.of(auction));
+        when(auctionDAO.findByStatuses(any(Connection.class), any())).thenReturn(List.of(auction));
         when(itemDAO.findById(auction.getItemId())).thenReturn(Optional.of(item));
 
         auctionService.loadAuctionsToRAM();
 
-        // Kiểm tra service có tìm auction theo status OPEN/RUNNING
-        verify(auctionDAO).findByStatuses(anyList());
-
-        // Kiểm tra service có load item cho auction
-        verify(itemDAO).findById(auction.getItemId());
-
-        // Sau khi load, auction phải có item
+        verify(auctionDAO).findByStatuses(any(Connection.class), any());
         assertNotNull(auction.getItem());
         assertEquals("Laptop Dell", auction.getItem().getName());
-
-        // Auction phải được add vào RAM
         assertNotNull(auctionManage.getAuctionById("auction-load-1"));
+    }
+
+    private static class FakeDbConnection implements Connection {
+        @Override public void setAutoCommit(boolean autoCommit) throws SQLException {}
+        @Override public boolean getAutoCommit() throws SQLException { return true; }
+        @Override public void commit() throws SQLException {}
+        @Override public void rollback() throws SQLException {}
+        @Override public void close() throws SQLException {}
+        @Override public boolean isClosed() throws SQLException { return false; }
+        @Override public <T> T unwrap(Class<T> iface) throws SQLException { return null; }
+        @Override public boolean isWrapperFor(Class<?> iface) throws SQLException { return false; }
+        @Override public java.sql.Statement createStatement() throws SQLException { return null; }
+        @Override public java.sql.PreparedStatement prepareStatement(String sql) throws SQLException { return null; }
+        @Override public java.sql.CallableStatement prepareCall(String sql) throws SQLException { return null; }
+        @Override public String nativeSQL(String sql) throws SQLException { return null; }
+        @Override public java.sql.DatabaseMetaData getMetaData() throws SQLException { return null; }
+        @Override public void setReadOnly(boolean readOnly) throws SQLException {}
+        @Override public boolean isReadOnly() throws SQLException { return false; }
+        @Override public void setCatalog(String catalog) throws SQLException {}
+        @Override public String getCatalog() throws SQLException { return null; }
+        @Override public void setTransactionIsolation(int level) throws SQLException {}
+        @Override public int getTransactionIsolation() throws SQLException { return Connection.TRANSACTION_NONE; }
+        @Override public java.sql.SQLWarning getWarnings() throws SQLException { return null; }
+        @Override public void clearWarnings() throws SQLException {}
+        @Override public java.sql.Statement createStatement(int resultSetType, int resultSetConcurrency) throws SQLException { return null; }
+        @Override public java.sql.PreparedStatement prepareStatement(String sql, int resultSetType, int resultSetConcurrency) throws SQLException { return null; }
+        @Override public java.sql.CallableStatement prepareCall(String sql, int resultSetType, int resultSetConcurrency) throws SQLException { return null; }
+        @Override public java.util.Map<String, Class<?>> getTypeMap() throws SQLException { return null; }
+        @Override public void setTypeMap(java.util.Map<String, Class<?>> map) throws SQLException {}
+        @Override public void setHoldability(int holdability) throws SQLException {}
+        @Override public int getHoldability() throws SQLException { return 0; }
+        @Override public java.sql.Savepoint setSavepoint() throws SQLException { return null; }
+        @Override public java.sql.Savepoint setSavepoint(String name) throws SQLException { return null; }
+        @Override public void rollback(java.sql.Savepoint savepoint) throws SQLException {}
+        @Override public void releaseSavepoint(java.sql.Savepoint savepoint) throws SQLException {}
+        @Override public java.sql.Statement createStatement(int resultSetType, int resultSetConcurrency, int resultSetHoldability) throws SQLException { return null; }
+        @Override public java.sql.PreparedStatement prepareStatement(String sql, int resultSetType, int resultSetConcurrency, int resultSetHoldability) throws SQLException { return null; }
+        @Override public java.sql.CallableStatement prepareCall(String sql, int resultSetType, int resultSetConcurrency, int resultSetHoldability) throws SQLException { return null; }
+        @Override public java.sql.PreparedStatement prepareStatement(String sql, int autoGeneratedKeys) throws SQLException { return null; }
+        @Override public java.sql.PreparedStatement prepareStatement(String sql, int[] columnIndexes) throws SQLException { return null; }
+        @Override public java.sql.PreparedStatement prepareStatement(String sql, String[] columnNames) throws SQLException { return null; }
+        @Override public java.sql.Clob createClob() throws SQLException { return null; }
+        @Override public java.sql.Blob createBlob() throws SQLException { return null; }
+        @Override public java.sql.NClob createNClob() throws SQLException { return null; }
+        @Override public java.sql.SQLXML createSQLXML() throws SQLException { return null; }
+        @Override public boolean isValid(int timeout) throws SQLException { return true; }
+        @Override public void setClientInfo(String name, String value) throws java.sql.SQLClientInfoException {}
+        @Override public void setClientInfo(java.util.Properties properties) throws java.sql.SQLClientInfoException {}
+        @Override public String getClientInfo(String name) throws SQLException { return null; }
+        @Override public java.util.Properties getClientInfo() throws SQLException { return null; }
+        @Override public java.sql.Array createArrayOf(String typeName, Object[] elements) throws SQLException { return null; }
+        @Override public java.sql.Struct createStruct(String typeName, Object[] attributes) throws SQLException { return null; }
+        @Override public void setSchema(String schema) throws SQLException {}
+        @Override public String getSchema() throws SQLException { return null; }
+        @Override public void abort(java.util.concurrent.Executor executor) throws SQLException {}
+        @Override public void setNetworkTimeout(java.util.concurrent.Executor executor, int milliseconds) throws SQLException {}
+        @Override public int getNetworkTimeout() throws SQLException { return 0; }
     }
 }
